feat: admin endpoint
