# openapi.yaml
@@ -123,6 +123,84 @@ paths:
         404:
           description: Not Found
 
+  /admin/best-profession:
+    get:
+      summary: Returns the profession that earned the most money in the time range
+      operationId: getBestProfession
+      parameters:
+        - name: start
+          in: query
+          required: true
+          schema:
+            type: string
+            format: date
+        - name: end
+          in: query
+          required: true
+          schema:
+            type: string
+            format: date
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - profession
+                  - total
+                properties:
+                  profession:
+                    type: string
+                    nullable: true
+                  total:
+                    type: number
+        400:
+          description: Bad Request
+
+  /admin/best-clients:
+    get:
+      summary: returns the clients the paid the most for jobs in the query time period
+      operationId: getBestClients
+      parameters:
+        - name: start
+          in: query
+          required: true
+          schema:
+            type: string
+            format: date
+        - name: end
+          in: query
+          required: true
+          schema:
+            type: string
+            format: date
+        - name: limit
+          in: query
+          required: false
+          schema:
+            type: integer
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  required:
+                    - client
+                    - total
+                  properties:
+                    id:
+                      type: number
+                    fullName:
+                      type: string
+                    paid:
+                      type: number
+
 components:
   securitySchemes:
     ProfileIdAuth:
