# src/services/service-contracts/BestClientDto.ts
@@ -1,0 +1,5 @@
+export interface BestClientDto {
+  id: number
+  fullName: string
+  paid: number
+}
